# database-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
config/: servers.example.yaml
design/: 00-overview.md  01-architecture.md  02-connection-and-discovery.md  03-extraction-and-store.md  04-parsing-and-dependencies.md  05-table-dictionary.md  06-categorization-and-foldering.md  07-embedding-and-indexing.md  08-retrieval-and-reranking.md  09-llm-provider-layer.md  10-agent-runtime.md  11-scheduling-and-selfupdate.md  12-serving-api-cli.md  13-tech-stack-and-roadmap.md  14-security-and-privacy.md  15-testing-and-eval.md  16-observability-and-monitoring.md  17-chat-memory-and-sessions.md  18-interaction-streaming-feedback.md  19-deployment-and-operations.md  20-concurrency-capacity-and-performance.md  README.md
migrations/: 0001_extensions.sql  0002_catalog.sql  0003_embeddings.sql
seed/mssql/: 01_schema.sql
src/api/: main.py
src/application/dtos/: llm.py  source.py
src/application/llm/: cache.py  structured.py
src/application/ports/: embedding.py  llm.py  object_store.py  parser.py  repositories.py  reranker.py  source_db.py
src/application/use_cases/: queries.py
src/cli/: main.py
src/domain/entities/: catalog.py  (+2 more)
src/infrastructure/: container.py
src/worker/: main.py
tests/unit/: test_change_detection.py  test_dependency_resolver.py  test_disk_store.py  test_llm_adapters.py  test_m4_pipeline.py  test_m4_services.py  test_parser.py  test_sql_normalize.py  test_structured_and_factory.py  test_sync_pipeline.py
(+35 files in other folders)
