[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "db-agent"
version = "0.1.0"
description = "MSSQL agentic catalog system — deterministic core (M0-M2)"
readme = "design/README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pyodbc>=5.1",
    "sqlglot>=25.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# BGE-M3 lokal embedding (dense+sparse) — design/07 varsayılan. Ağır (torch).
local = [
    "FlagEmbedding>=1.2",
    "torch>=2.2",
]
# Vertex AI (Gemini chat + embedding) auth — design/09.
vertex = [
    "google-auth>=2.30",
]

[project.scripts]
db-agent = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
